updates part 1